[gd_scene load_steps=54 format=3 uid="uid://netxnaflx7ja"]

[ext_resource type="Theme" uid="uid://cdnxxxhxeteub" path="res://Default2.tres" id="1_7237o"]
[ext_resource type="Script" path="res://assets/scenes/choose_character.gd" id="1_n2n2e"]
[ext_resource type="Texture2D" uid="uid://b0sf2uxclgaa6" path="res://assets/sprites/hero3_sprites/Idle.png" id="2_xodfy"]
[ext_resource type="Texture2D" uid="uid://csynhm1j71g2e" path="res://assets/sprites/hero_sprites/Idle_2.png" id="3_1fu3x"]
[ext_resource type="Texture2D" uid="uid://4h6nfwx1lsof" path="res://assets/sprites/hero2_sprites/Idle.png" id="4_q4mr1"]
[ext_resource type="Texture2D" uid="uid://dhtnnpsc48oo7" path="res://assets/sprites/hero2_sprites/Idle_2.png" id="5_ihv30"]

[sub_resource type="AtlasTexture" id="AtlasTexture_imkvw"]
atlas = ExtResource("2_xodfy")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nsodj"]
atlas = ExtResource("2_xodfy")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_s85vh"]
atlas = ExtResource("2_xodfy")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_al5u2"]
atlas = ExtResource("2_xodfy")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_r3kib"]
atlas = ExtResource("2_xodfy")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_yma2v"]
atlas = ExtResource("2_xodfy")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_pgpve"]
atlas = ExtResource("2_xodfy")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6axkq"]
atlas = ExtResource("3_1fu3x")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljbdh"]
atlas = ExtResource("3_1fu3x")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lg65y"]
atlas = ExtResource("3_1fu3x")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_4jbq5"]
atlas = ExtResource("3_1fu3x")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ehp7j"]
atlas = ExtResource("3_1fu3x")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_nlkd3"]
atlas = ExtResource("3_1fu3x")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_arqr6"]
atlas = ExtResource("3_1fu3x")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_iuypm"]
atlas = ExtResource("3_1fu3x")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_c1101"]
atlas = ExtResource("3_1fu3x")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kas35"]
atlas = ExtResource("3_1fu3x")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_668ck"]
atlas = ExtResource("3_1fu3x")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_8nm03"]
atlas = ExtResource("3_1fu3x")
region = Rect2(1408, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_dfsb0"]
atlas = ExtResource("3_1fu3x")
region = Rect2(1536, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_w4506"]
atlas = ExtResource("3_1fu3x")
region = Rect2(1664, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7v7le"]
atlas = ExtResource("4_q4mr1")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_alam3"]
atlas = ExtResource("4_q4mr1")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_qr6b0"]
atlas = ExtResource("4_q4mr1")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_c2hgb"]
atlas = ExtResource("4_q4mr1")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_tpsxc"]
atlas = ExtResource("4_q4mr1")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqin7"]
atlas = ExtResource("4_q4mr1")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gt3n7"]
atlas = ExtResource("5_ihv30")
region = Rect2(0, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_47x2v"]
atlas = ExtResource("5_ihv30")
region = Rect2(128, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t502c"]
atlas = ExtResource("5_ihv30")
region = Rect2(256, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_lnopf"]
atlas = ExtResource("5_ihv30")
region = Rect2(384, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_7cwfe"]
atlas = ExtResource("5_ihv30")
region = Rect2(512, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_ka1sj"]
atlas = ExtResource("5_ihv30")
region = Rect2(640, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_gpe1k"]
atlas = ExtResource("5_ihv30")
region = Rect2(768, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_kuux5"]
atlas = ExtResource("5_ihv30")
region = Rect2(896, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_3wdb6"]
atlas = ExtResource("5_ihv30")
region = Rect2(1024, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_6mswc"]
atlas = ExtResource("5_ihv30")
region = Rect2(1152, 0, 128, 128)

[sub_resource type="AtlasTexture" id="AtlasTexture_t6i4k"]
atlas = ExtResource("5_ihv30")
region = Rect2(1280, 0, 128, 128)

[sub_resource type="SpriteFrames" id="SpriteFrames_nq1g6"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_imkvw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nsodj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s85vh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_al5u2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r3kib")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yma2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pgpve")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6axkq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljbdh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lg65y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4jbq5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ehp7j")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nlkd3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arqr6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_iuypm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c1101")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kas35")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_668ck")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8nm03")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dfsb0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_w4506")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7v7le")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_alam3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qr6b0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c2hgb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tpsxc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vqin7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gt3n7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47x2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t502c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lnopf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_7cwfe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ka1sj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_gpe1k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kuux5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3wdb6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6mswc")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_t6i4k")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_luno5"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}

[sub_resource type="Animation" id="Animation_wwtk7"]
resource_name = "hero"
length = 1.5
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [7, 8, 9, 10, 11, 12, 13, 14, 15, 16, 17, 18, 19, 20]
}

[sub_resource type="Animation" id="Animation_4mae5"]
resource_name = "hero_2"
length = 2.0
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6, 0.7, 0.8, 0.9, 1, 1.1, 1.2, 1.3, 1.4, 1.5, 1.6, 1.73333),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [21, 22, 23, 24, 25, 26, 27, 28, 29, 30, 31, 32, 33, 34, 35, 36, 37, 21]
}

[sub_resource type="Animation" id="Animation_7nrvb"]
resource_name = "hero_3"
length = 0.62
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4, 5, 6]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0kfb2"]
_data = {
"RESET": SubResource("Animation_luno5"),
"hero": SubResource("Animation_wwtk7"),
"hero_2": SubResource("Animation_4mae5"),
"hero_3": SubResource("Animation_7nrvb")
}

[sub_resource type="Animation" id="Animation_vfeag"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_aaanb"]
resource_name = "fade_in"
length = 0.5
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_h2yts"]
_data = {
"RESET": SubResource("Animation_vfeag"),
"fade_in": SubResource("Animation_aaanb")
}

[node name="ChooseCharacter" type="Node2D"]
script = ExtResource("1_n2n2e")

[node name="ColorRect" type="ColorRect" parent="."]
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0.678944, 0.678944, 0.678944, 1)

[node name="StartGame" type="Button" parent="."]
offset_left = 479.0
offset_top = 412.0
offset_right = 659.0
offset_bottom = 472.0
theme = ExtResource("1_7237o")
text = "Start Game"

[node name="SpriteController" type="Node" parent="."]

[node name="prev" type="Button" parent="SpriteController"]
anchors_preset = -1
anchor_right = 0.042
anchor_bottom = 0.028
offset_left = 400.0
offset_top = 250.0
offset_right = 404.846
offset_bottom = 271.856
theme = ExtResource("1_7237o")
text = "<
"

[node name="next" type="Button" parent="SpriteController"]
offset_left = 690.0
offset_top = 250.0
offset_right = 730.0
offset_bottom = 290.0
theme = ExtResource("1_7237o")
text = ">"

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="SpriteController"]
position = Vector2(576, 200)
scale = Vector2(3, 3)
sprite_frames = SubResource("SpriteFrames_nq1g6")

[node name="AnimationPlayer" type="AnimationPlayer" parent="SpriteController"]
libraries = {
"": SubResource("AnimationLibrary_0kfb2")
}

[node name="TransitionLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="TransitionLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
color = Color(0, 0, 0, 0)

[node name="AnimationPlayer" type="AnimationPlayer" parent="TransitionLayer"]
libraries = {
"": SubResource("AnimationLibrary_h2yts")
}

[connection signal="pressed" from="StartGame" to="." method="_on_start_game_pressed"]
[connection signal="pressed" from="SpriteController/prev" to="." method="_on_prev_pressed"]
[connection signal="pressed" from="SpriteController/next" to="." method="_on_next_pressed"]
